--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -4,7 +4,7 @@ webdriver{
     chrome.silentOutput=true
 }
 
-headless.mode = false
+headless.mode = true
 
 serenity{
     take.screenshots = AFTER_EACH_STEP
